...
                )
                Text(
                    "${oompaLoompa.firstName} ${oompaLoompa.lastName}",
                    modifier = Modifier
                        .padding(start = 12.dp)
                        .fillMaxWidth()
                        .testTag("oompaLoompaName"),
                    fontSize = 30.sp,
                    textAlign = TextAlign.Start,
                    fontWeight = FontWeight.Bold,
                    color = MaterialTheme.colorScheme.tertiary
                )
            }
...
