...
                    contentScale = ContentScale.FillHeight
                )
        )
        SearchBar(
            modifier = Modifier
                .align(Alignment.TopCenter)
                .testTag("searchBarFilter")
                .semantics { traversalIndex = -1f },
            query = query,
            colors = SearchBarDefaults.colors(
                containerColor = MaterialTheme.colorScheme.onTertiary,
            ),
            onQueryChange = {
...
